--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     position: relative;
 }
 .presentation video {
-    width: 100%;
+    width: 90%;
     height: 100%;
     opacity: 60%;
     position: relative;
@@ -16,21 +16,82 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 15px;
+    border-radius: 30px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5.6px);
+    -webkit-backdrop-filter: blur(5.6px);
+    border: 5px solid rgba(255, 255, 255, 0.3);
 }
 .presentation .title {
     position: absolute;
     top: 0;
     left: 0;
-    background: #000;
+    background: #000000;
     height: 100%;
     width: 100%;
     color: #ffffff;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 200px;
+    font-size: 100px;
     font-weight: 900;
     mix-blend-mode: multiply;
     text-align: center;
-    opacity: 60%;
+    opacity: 50%;
+}
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+    margin: 15px;
+}
+button {
+    height: 35px;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(17px);
+  -webkit-backdrop-filter: blur(17px);
+  border-radius: 20px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 
+    0 8px 32px rgba(0, 0, 0, 0.1),
+    inset 0 1px 0 rgba(255, 255, 255, 0.5),
+    inset 0 -1px 0 rgba(255, 255, 255, 0.1),
+    inset 0 0 0px 0px rgba(255, 255, 255, 0);
+  position: relative;
+  overflow: hidden;
+  color: rgba(182, 182, 182, 0.753);
+}
+
+button::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 1px;
+  background: linear-gradient(
+    90deg,
+    transparent,
+    rgba(255, 255, 255, 0.8),
+    transparent
+  );
+}
+
+button::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1px;
+  height: 100%;
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0.8),
+    transparent,
+    rgba(255, 255, 255, 0.3)
+  );
+}
+button:hover {
+    color: white;
+    transition: 0.5s;
 }
