--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     position: relative;
 }
 .presentation video {
-    width: 90%;
+    width: 100%;
     height: 100%;
     opacity: 60%;
     position: relative;
@@ -16,18 +16,13 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 15px;
-    border-radius: 30px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5.6px);
-    -webkit-backdrop-filter: blur(5.6px);
-    border: 5px solid rgba(255, 255, 255, 0.3);
+    margin: 0;
 }
 .presentation .title {
     position: absolute;
     top: 0;
     left: 0;
-    background: #000000;
+    background: #00000069;
     height: 100%;
     width: 100%;
     color: #ffffff;
@@ -36,62 +31,53 @@ body {
     justify-content: center;
     font-size: 100px;
     font-weight: 900;
-    mix-blend-mode: multiply;
     text-align: center;
-    opacity: 50%;
 }
 .nav-bar {
     display: flex;
     justify-content: space-between;
-    margin: 15px;
+    background-color: grey;
+    padding: 5px;
+    position: sticky ;
+    top: 0;
 }
 button {
-    height: 35px;
-  background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(17px);
-  -webkit-backdrop-filter: blur(17px);
-  border-radius: 20px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-shadow: 
-    0 8px 32px rgba(0, 0, 0, 0.1),
-    inset 0 1px 0 rgba(255, 255, 255, 0.5),
-    inset 0 -1px 0 rgba(255, 255, 255, 0.1),
-    inset 0 0 0px 0px rgba(255, 255, 255, 0);
-  position: relative;
-  overflow: hidden;
-  color: rgba(182, 182, 182, 0.753);
+  height: 35px;
+  border: none;
+  background-color: #00000000;
+  color: rgba(20, 20, 20, 0.753);
 }
 
-button::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 1px;
-  background: linear-gradient(
-    90deg,
-    transparent,
-    rgba(255, 255, 255, 0.8),
-    transparent
-  );
-}
-
-button::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 1px;
-  height: 100%;
-  background: linear-gradient(
-    180deg,
-    rgba(255, 255, 255, 0.8),
-    transparent,
-    rgba(255, 255, 255, 0.3)
-  );
-}
 button:hover {
     color: white;
     transition: 0.5s;
+}
+.info1 {
+  display: flex;
+  color: white;
+  margin: 3%;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 100px;
+}
+.info1 .text {
+  text-align: center;
+  margin: 5%;
+}
+.info1 h1 {
+  text-align: center;
+  font-size: 4em;
+  margin: 0;
+}
+.info1 img {
+  width: 50vw;
+  border-radius: 30px;;
+}
+.info1 p{
+  font-size: 2em;
+  padding: 30px;
+  margin: 0;
+}
+.final .text {
+  
 }
