--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
     background-color: black;
@@ -43,14 +47,17 @@ body {
 }
 button {
   height: 35px;
-  border: none;
+  border: 1;
+  border-radius: 10px;
   background-color: #00000000;
-  color: rgba(20, 20, 20, 0.753);
+  color: black;
+  font-weight: 900;
 }
 
 button:hover {
     color: white;
-    transition: 0.5s;
+    transition: 0.2s;
+  cursor: pointer;
 }
 .info1 {
   display: flex;
@@ -79,5 +86,18 @@ button:hover {
   margin: 0;
 }
 .final .text {
-  
+  text-align: center;
+  color: white;
+  font-size: 25px;
+  margin-left: 10%;
+  margin-right: 10%;
+
+}
+.final img {
+  width: 85%;
+  display: flex;
+  margin: auto;
+  border-radius: 5%;
+  margin-top: 50px;
+  margin-bottom: 200px;
 }
