--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
 html {
   scroll-behavior: smooth;
+  width: 1500px;
 }
 
 body {
     margin: 0;
-    background-color: black;
+    background-color: #84994F;
     font-family: Roboto, Arial;
 }
 
 .presentation {
     position: relative;
+    background-color: black;
 }
 .presentation video {
     width: 100%;
@@ -40,32 +42,45 @@ body {
 .nav-bar {
     display: flex;
     justify-content: space-between;
-    background-color: grey;
+    background-color: #fccb2c;
     padding: 5px;
     position: sticky ;
     top: 0;
+    border-color: black;
+    border: 10px;
 }
 button {
   height: 35px;
   border: 1;
   border-radius: 10px;
-  background-color: #00000000;
+  background-color: #FCB53B;
   color: black;
   font-weight: 900;
 }
 
+
 button:hover {
     color: white;
     transition: 0.2s;
-  cursor: pointer;
+    cursor: pointer;
+    box-shadow: 5px 5px black;
+    top: 5px;
 }
 .info1 {
   display: flex;
-  color: white;
+  color: rgb(0, 0, 0);
   margin: 3%;
   justify-content: space-between;
   align-items: center;
   margin-top: 100px;
+  background-color: #FFE797;
+  border-radius: 30px;
+  padding: 30px;
+  box-sizing: border-box;
+}
+.info1:hover {
+  box-shadow: 20px 20px 50px rgb(0, 0, 0);
+  transition: 0.3s;
 }
 .info1 .text {
   text-align: center;
@@ -77,17 +92,18 @@ button:hover {
   margin: 0;
 }
 .info1 img {
-  width: 50vw;
-  border-radius: 30px;;
+  width: 40vw;
+  border-radius: 30px;
 }
 .info1 p{
-  font-size: 2em;
+  font-size: 1.5em;
   padding: 30px;
   margin: 0;
 }
+
 .final .text {
   text-align: center;
-  color: white;
+  color: rgb(0, 0, 0);
   font-size: 25px;
   margin-left: 10%;
   margin-right: 10%;
