--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 html {
   scroll-behavior: smooth;
+  box-sizing: border-box;
 }
 
 body {
@@ -116,6 +117,7 @@ button:hover {
 .info1 img {
   width: 40vw;
   border-radius: 30px;
+  
 }
 .info1 p{
   font-size: 1.5em;
